force-app/main/default/objects/copado__Promotion_Pull_Request__c/copado__Promotion_Pull_Request__c.object-meta.xml
<CustomObject>
    <label>Promotion Pull Request</label>
    <nameField>
        <label>Promotion Pull Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Pull Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>