force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Approval_Status__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Request Changes</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>