force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Changed_Files__c.field-meta.xml
<CustomField>
    <fullName>copado__Changed_Files__c</fullName>
    <description>The number of files changed in the pull request</description>
    <label>Changed Files</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>