force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Closed_At__c.field-meta.xml
<CustomField>
    <fullName>copado__Closed_At__c</fullName>
    <description>The date when the pull request was closed or empty if it is not closed</description>
    <label>Closed At</label>
    <type>Date</type>
</CustomField>