force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Mergeable__c.field-meta.xml
<CustomField>
    <fullName>copado__Mergeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mergeable</label>
    <type>Checkbox</type>
</CustomField>