force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Merged_At__c.field-meta.xml
<CustomField>
    <fullName>copado__Merged_At__c</fullName>
    <description>The date when the pull request was merged or empty if it is not merged</description>
    <label>Merged At</label>
    <type>Date</type>
</CustomField>