force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Promotion__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipLabel>Pull Requests</relationshipLabel>
    <relationshipName>Pull_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>