force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__Reviewer_Approvals_Count__c.field-meta.xml
<CustomField>
    <fullName>copado__Reviewer_Approvals_Count__c</fullName>
    <inlineHelpText>Shows the number of reviewers who have approved the pull request. Updates automatically as reviewers approve the pull request in your Git provider. Depending on the provider, data may be available via webhook or may require OAuth authorization</inlineHelpText>
    <label>Reviewer Approvals Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>