force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__State__c.field-meta.xml
<CustomField>
    <fullName>copado__State__c</fullName>
    <description>The state of the pull request</description>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>