force-app/main/default/objects/copado__Promotion_Pull_Request__c/fields/copado__User_Avatar_Url__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Avatar_Url__c</fullName>
    <label>User Avatar Url</label>
    <type>Url</type>
</CustomField>